# WaveCollapse

./: .gitignore  CMakeLists.txt  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: python-package-conda.yml
WaveCollapse/: _version.py
WaveCollapse.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
_skbuild/macosx-10.16-x86_64-3.11/cmake-build/: CMakeCache.txt  CMakeSpec.json  Makefile  WaveCollapse  cmake_install.cmake  install_manifest.txt
_skbuild/macosx-10.16-x86_64-3.12/cmake-build/: CMakeCache.txt  CMakeSpec.json  Makefile  WaveCollapse  cmake_install.cmake  install_manifest.txt  libWaveCollapse.dylib
pythonExample/: manyChunk.py  oneChunk.py
source/: Chunk.cpp  Chunk.h  WaveCollapse.cpp  WaveCollapse.h  main.cpp
src/: Chunk.cpp  Chunk.h  WaveCollapse.cpp  WaveCollapse.h  WaveCollapseInt.cpp  WaveCollapseInterface.cpp
src/tests/: test_waveCollapse.py
srcCPP/: Chunk.cpp  WaveCollapse.h  WaveCollapseInt.cpp  WaveCollapseInt.h  __init__.py  _version.py
srcPython/: __init__.py
srcPython/tests/: __init__.py  test_waveCollapse.py
waveCollapse/: Chunk.cpp  Chunk.h  WaveCollapse.cpp  WaveCollapse.h  WaveCollapseInterface.cpp  _version.py  main.cpp
